 Bug 458206 -  Abort @ ~nsXMLHttpRequest, r+sr=sicking